holos/deploy/clusters/k3d-holos/components/keycloak/destinationrule-keycloak-service.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: keycloak-service
  namespace: istio-gateways
spec:
  exportTo:
  - .
  host: keycloak-service.keycloak.svc.cluster.local
  trafficPolicy:
    tls:
      credentialName: wildcard-holos-internal
      mode: SIMPLE
      sni: keycloak-service.keycloak.svc.cluster.local
      subjectAltNames:
      - keycloak-service.keycloak.svc.cluster.local
