holos/deploy/clusters/k3d-holos/components/keycloak/httproute-keycloak-redirect-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-redirect-http
  namespace: keycloak
spec:
  hostnames:
  - auth.holos.internal
  parentRefs:
  - name: default
    namespace: istio-gateways
    sectionName: http
  rules:
  - filters:
    - requestRedirect:
        scheme: https
        statusCode: 301
      type: RequestRedirect
