holos/deploy/clusters/k3d-holos/components/keycloak/httproute-keycloak.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  hostnames:
  - auth.holos.internal
  parentRefs:
  - name: default
    namespace: istio-gateways
    sectionName: https
  rules:
  - backendRefs:
    - name: keycloak-service
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
