holos/deploy/clusters/k3d-holos/components/keycloak/networkpolicy-keycloak-allow-ztunnel-hbone.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: keycloak-allow-ztunnel-hbone
  namespace: keycloak
spec:
  ingress:
  - ports:
    - port: 15008
      protocol: TCP
  podSelector:
    matchLabels:
      app: keycloak
  policyTypes:
  - Ingress
